css/my.css
body {
    background: #fff;
    background-size: 100% 100%;
    font-family: "Lato", sans-serif;
}

@font-face {
    font-family: Circular;
    src: url("../font/circular_std/CircularStd-Medium.otf");
}

@font-face {
    font-family: Circular;
    src: url("../font/circular_std/CircularStd-Bold.otf");
    font-weight: bold;
}

#section1 {
    background: #ebf3fb;
    margin-bottom: 0 !important;
}

#section1,
#section3 {
    margin-bottom: 5%;
}

#nav-menu li:nth-child(6) a {
    padding: 8px;
}

#nav-menu li:nth-child(7) a {
    padding: 8px;
}

#header #sldr {
    width: 100%;
    padding: 0;
    margin: 0;
    background: rgba(0, 0, 0, 0.13);
}

.headerimg {
    width: 100%;
    height: auto;
    text-align: center;
    overflow: hidden;
}

.headerimg img {
    width: 100%;
}

.headerimg h1 {
    margin: 15% 0 1%;
    position: absolute;
    z-index: 1;
    left: 50%;
    color: #ffffff;
    transform: translate(-50%);
}

.navbar {
    margin-bottom: 0;
}

.navbar-default {
    background: rgb(255, 255, 255);
    border: transparent;
    color: rgb(27, 27, 27);
}

.navbar-default .navbar-nav>li>a {
    color: rgb(27, 27, 27);
    font-weight: 600;
    padding-bottom: 10px;
    padding-left: 5px;
    padding-right: 5px;
    margin: 0 10px;
}

.navbar-default .navbar-nav>li>.mnu {
    border-bottom: 3px solid transparent;
}

.navbar-default .navbar-nav>li>.mnu:hover {
    border-bottom: 3px solid #eac435;
}

.login {
    width: 100px;
    height: 40px;
    background: #28587c;
    color: #fff;
    font-weight: 600;
    border: none;
    outline: none;
    border-radius: 5%;
}

.rgtr {
    width: 100px;
    height: 40px;
    background: #eac435;
    color: #28587c;
    font-weight: 600;
    border: none;
    outline: none;
    border-radius: 5%;
}

.login:hover {
    border: 2px solid #28587c;
    background: none;
    color: #28587c;
}

.rgtr:hover {
    border: 2px solid #eac435;
    background: none;
}

#header .container-fluid {
    padding: 4px 3%;
    height: auto;
}

.navbar-brand img {
    max-width: 200px;
    height: 36px;
    margin-left: 30px;
    margin-bottom: 10px;
}

#mynavbar ul {
    margin-top: 8px;
}

.carousel-inner {
    width: 100%;
    height: calc(100% - 80px);
    background: #000;
}

.carousel-indicators .active {
    width: 30px;
    background: #eac435;
    border: #eac435;
}

.carousel-indicators li {
    background: #fff;
}

.item {
    width: 100%;
    height: 100%;
    padding: 0 !important;
    margin: 0 !important;
}

.item .active {
    width: 100%;
    height: 100%;
}

.item img {
    width: 100%;
    height: 100%;
    opacity: .5;
}

.header-qotes {
    position: absolute;
    top: 50%;
    z-index: 1;
    left: 10%;
    right: 5%;
}

.header-qotes .rgtr {
    width: 280px;
    height: 85px;
    font-size: 24px;
    border-radius: 2%;
}

.header-qotes .rgtr:hover {
    color: #fff;
}

.carousel-inner>.item>img {
    height: 100%;
}

.header-qotes h1 {
    font-size: 60px;
    font-family: Circular;
    color: #fff;
    font-weight: 600;
}

.header-qotes p {
    color: #fff;
    margin: 20px 0 !important;
    font-size: 22px;
}

.header-qotes a {
    padding: 0;
}

#os p,
h1,
h2,
h3,
h4,
{
    display: inline-block;
    text-align: justify;
}

#os h4 {
    font-family: "Segoe UI", Arial, sans-serif;
    font-weight: 700;
    height: 25px;
    margin: 20px 0 30px 0;
}

#os {
    width: 90%;
    margin: 0 5%;
    background: #ebf3fb;
    padding-top: 50px;
}

.os img {
    width: 100%;
    max-width: 150px;
}

#section2 .container-fluid {
    padding: 0;
}

.parallax {
    /* The image used */
    /* Set a specific height */
    /* Create the parallax scrolling effect */
    /* background-attachment: fixed;
                        background-position: left;*/
    background-repeat: no-repeat;
    background-size: auto;
}


/**/


/*.parallax img {*/


/*width: 60%;*/


/*height: auto;*/


/*position: absolute;*/


/*top: 10%;*/


/*left: 20%;*/


/*}*/

.parallax img {
    max-width: 90%;
}

#parallax {
    padding: 0;
}

.specialities {
    height: auto;
    padding: 10%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: Circular;
}

.specialities h6 {
    color: skyblue;
    font-weight: 600;
}

.specialities hr {
    border: 0;
    width: 100px;
    border-top: 5px solid #e9c435;
    margin: 10px 0;
}

.specialities p {
    margin: 40px 0 10px 50px;
}

.specialities ul {
    padding-left: 70px;
}

.specialities ul li {
    margin-top: 20px;
}

.offer .container {
    width: 100%;
    margin: 2% 5%;
}

.offer .container h6 {
    color: skyblue;
    font-weight: 600;
}

.offer .container hr {
    border: 0;
    width: 100px;
    border-top: 5px solid #e9c435;
    margin: 10px 0;
}

.offer .container-fluid {
    padding: 0;
}

#courses {
    padding: 0;
    text-align: center;
    color: #fff;
}

#onsite,
#online,
#other {
    padding: 10% 7%;
}

#onsite {
    background-image: url("../img/onsite.jpg");
    background-size: cover;
}

#online {
    background-image: url("../img/online.jpg");
    background-size: cover;
}

#other {
    background-image: url("../img/Others.jpg");
    background-size: cover;
}

#online:hover {
    transition-duration: 1s;
    transition-delay: .05s;
}

.sktlbtn {
    width: 265px;
    height: 68px;
    color: white;
    border: 2px solid #fff;
    background: transparent;
    border-radius: 5px;
}

.sktlbtn:hover {
    transition-delay: .05s;
    transition-duration: 1s;
}

#other a .sktlbtn:hover {
    background: #fff;
    color: #a37951;
}

#online a .sktlbtn:hover {
    background: #fff;
    color: #0090d9;
}

#onsite a .sktlbtn:hover {
    background: #fff;
    color: #f35b58;
}

.clients .container {
    width: 100%;
    margin: 2% 5%;
}

.clients .container h6 {
    color: skyblue;
    font-weight: 600;
}

.clients .container hr {
    border: 0;
    width: 100px;
    border-top: 5px solid #e9c435;
    margin: 10px 0;
}
/* ... */

